# autografs

./: .gitignore  .pre-commit-config.yaml  CHANGES.txt  CLAUDE.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  __version__.py  align.py  atomtyper.py  autografs.py  cof_plan.md  fragment.py  framework.py  progress.md  pyproject.toml  requirements.txt  setup.py  test.py  topology.py  utils.py  v3_plan.md
.github/workflows/: ci.yml  publish.yml
autografs/: __init__.py  __version__.py  autografs.py  builder.py  framework.py
autografs/data/: covalent_radii.csv  uff4mof.csv
autografs/data/sbu/: DEFAULTS.xyz
autografs/data/topologies/: custom.cgd  nets.cgd
autografs/scripts/: cgd2pkl.py
autografs/tests/: C3h.xyz  D3d.xyz  D5d.xyz  Ioh.xyz  Oh.xyz  context.py  test_advanced.py  test_basic.py
autografs/utils/: __init__.py  io.py  mmanalysis.py  operations.py  pointgroup.py  sbu.py  symmetry.py  topology.py
data/sbu/: DEFAULTS.xyz  sbu.pkl
data/uff/: uff4mof.csv
database/: Acetylene_linear.inp  Al_mil53_monomer.inp  Al_trimeric_prism.inp  Amine_cap.inp  Anthracene_rectangle.inp  Azobenzene_rectangle.inp  Benzene_hexagonal.inp  Benzene_linear.inp  Benzene_rectangle.inp  Benzene_triangle.inp  Betabinaphtol_linear.inp  Bicyclooctane_linear.inp  Biphenyl_linear.inp  Biphenyl_rectangle.inp  Bipyridine_linear.inp  Butane_linear.inp  CdGaS_cluster_tetrahedral.inp  Chrysene_linear.inp  Chrysene_rectangle.inp  Coronene_rectangle.inp  CuCNS_square.inp  CuCN_trigonal_bipyramid.inp  Cubane_linear.inp  DCDPBN_Yaghi_linear.inp  DPMDBDA_linear.inp  Decapentene.inp  Diethinylbenzene_linear.inp  Diphenylperylimide_linear.inp  Fluorenone_linear.inp  Fluorine_cap.inp  GaS_cluster_tetrahedral.inp  H3BBC_Yaghi_triangle.inp  H3BTB_Yaghi_triangle.inp  H3BTE_Yaghi_triangle.inp  H3TATB_Yaghi_triangle.inp  H4ATC_Yaghi_tetrahedral.inp  H4DH11PhDC_Yaghi_linear.inp  H4DH9PhDC_Yaghi_linear.inp  H6BHEHPI_Yaghi_hexagonal.inp  Methyl_cap.inp  (+25 more)
docs/: api.rst  building.md  changelog.rst  cli.md  cofs-and-stacking.md  conf.py  coverage.md  deconstruction.md  editing.md  extending.md  getting_started.rst  index.rst  internals.md  rods.md  usage.rst
libraries/: rappe.csv  uff4mof.csv
scripts/: cgd2pkl.py  import_pormake_bbs.py  make_iza_aliases.py  make_test_fixture.py  sbu_coverage.py  verify_plane_groups.py
scripts/benchmarks/: embedding.py  netid.py  roundtrip.py  throughput.py
scripts/funnel/: funnel.py
scripts/rods/: scan_rod_mofs.py
src/autografs/: __init__.py  alignment.py  ase_relax.py  builder.py  cgd.py  charges.py  cli.py  deconstruct.py  editing.py  elastic.py  exceptions.py  extract_topology.py  fetch.py  fingerprint.py  fragment.py  framework.py  framework_io.py  harvest.py  net.py  plane_groups.py  porosity.py  relax.py  rod_build.py  rods.py  structure.py  symmetry.py  topology.py  topology_io.py  twist.py  utils.py
src/autografs/data/: defaults.xyz  eqeq.py  iza_aliases.json  iza_codes.py  pormake.xyz  uff4mof.py
tests/: Ci.xyz  D3h.xyz  Td.xyz  conftest.py  test.py  test_alignment.py  test_ase_relax.py  test_basic.py  test_benchmark_drivers.py  test_benchmarks.py  test_builder.py  test_cgd.py  test_charges.py  test_cli.py  test_deconstruct.py  test_editing.py  test_elastic.py  test_empty_slots.py  test_extract_topology.py  test_fetch.py  test_fingerprint.py  test_fixture_builds.py  test_framework.py  test_framework_io.py  test_funnel_driver.py  test_harvest.py  test_net.py  test_plane_groups.py  test_pormake_sbus.py  test_porosity.py  test_property_fuzz.py  test_relax.py  test_relax_embedding.py  test_rod_scan_script.py  test_rods.py  test_structure.py  test_symmetry.py  test_topology_io.py  test_twist.py  test_utils.py
tests/data/: IRMOF-1.cif  IZA-SOD.cif  eqeq_irmof1_reference.json  topologies_fixture.json
utils/: __init__.py  io.py  mmanalysis.py  operations.py  pointgroup.py  sbu.py  topologies.py
