[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AuToGraFS"
version = "3.0.0"
description = "Automatic Topological Generator for Framework Structures"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Damien Coupry", email = "damien.coupry@gmail.com"}
]
maintainers = [
    {name = "Damien Coupry", email = "damien.coupry@gmail.com"}
]
keywords = [
    "chemistry",
    "materials science",
    "MOF",
    "metal-organic frameworks",
    "topology",
    "crystallography",
    "computational chemistry"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.13"
dependencies = [
    "ase==3.26.0",
    "scipy==1.16.3",
    "numpy==2.3.5",
    "networkx==3.6",
    "pandas==2.3.3",
    "pymatgen==2025.10.7",
    "dill==0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "black==25.11.0",
    "isort==7.0.0",
    "flake8==7.3.0",
    "mypy==1.18.2",
]
docs = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "myst-parser==4.0.1",
]

[project.urls]
Homepage = "https://github.com/DCoupry/autografs"
Documentation = "https://github.com/DCoupry/autografs#readme"
Repository = "https://github.com/DCoupry/autografs.git"
Issues = "https://github.com/DCoupry/autografs/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autografs = ["data/*.csv", "data/*.xyz", "data/*.pkl"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/autografs"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["autografs"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
