[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AuToGraFS"
version = "3.0.0"
description = "Automatic Topological Generator for Framework Structures"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Damien Coupry", email = "damien.coupry@gmail.com"}
]
maintainers = [
    {name = "Damien Coupry", email = "damien.coupry@gmail.com"}
]
keywords = [
    "chemistry",
    "materials science",
    "MOF",
    "metal-organic frameworks",
    "topology",
    "crystallography",
    "computational chemistry"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "ase>=3.23.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "networkx>=3.0",
    "pymatgen>=2024.1.1",
    "dill>=0.3.8",
    "tqdm>=4.60",
    "requests>=2.28",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
autografs = "autografs.cli:main"
autografs-topologies = "autografs.cgd:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/DCoupry/autografs"
Documentation = "https://github.com/DCoupry/autografs#readme"
Repository = "https://github.com/DCoupry/autografs.git"
Issues = "https://github.com/DCoupry/autografs/issues"

# hatchling includes every file under the package directory (data
# files too), so no MANIFEST.in or package-data lists are needed
[tool.hatch.build.targets.wheel]
packages = ["src/autografs"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "scripts",
    "docs",
    "README.rst",
    "LICENSE.txt",
    "COPYING",
    "COPYING.LESSER",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/autografs"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # line length is the formatter's job; long strings allowed
]

[tool.ruff.lint.isort]
known-first-party = ["autografs"]

[tool.mypy]
# 3.12 target, not our 3.11 floor: current numpy stubs use PEP 695
# `type` statements, which mypy refuses to parse below 3.12. Runtime
# 3.11 compatibility is guarded by the CI test matrix instead.
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
